--- a/app/src/main/res/layout/fragment_transaction_display.xml
+++ b/app/src/main/res/layout/fragment_transaction_display.xml
@@ -10,18 +10,154 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/lblTransactionDisplay1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:text="Sender:"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txtTransactionDisplaySender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/lblTransactionDisplay1" />
+
+        <TextView
+            android:id="@+id/lblTransactionDisplay2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Receiver:"
+            app:layout_constraintStart_toStartOf="@+id/lblTransactionDisplay1"
+            app:layout_constraintTop_toBottomOf="@+id/lblTransactionDisplay1" />
+
+        <TextView
+            android:id="@+id/txtTransactionDisplayReceiver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="20dp"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="@+id/txtTransactionDisplaySender"
+            app:layout_constraintTop_toBottomOf="@+id/txtTransactionDisplaySender" />
+
+        <TextView
+            android:id="@+id/lblTransactionDisplay3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Amount:"
+            app:layout_constraintStart_toStartOf="@+id/lblTransactionDisplay2"
+            app:layout_constraintTop_toBottomOf="@+id/lblTransactionDisplay2" />
+
+        <TextView
+            android:id="@+id/txtTransactionDisplayAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="20dp"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="@+id/txtTransactionDisplayReceiver"
+            app:layout_constraintTop_toBottomOf="@+id/txtTransactionDisplayReceiver" />
+
+        <TextView
+            android:id="@+id/lblTransactionDisplay4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Category:"
+            app:layout_constraintStart_toStartOf="@+id/lblTransactionDisplay3"
+            app:layout_constraintTop_toBottomOf="@+id/lblTransactionDisplay3" />
+
+        <TextView
+            android:id="@+id/txtTransactionDisplayCatgeory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="20dp"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="@+id/txtTransactionDisplayAmount"
+            app:layout_constraintTop_toBottomOf="@+id/txtTransactionDisplayAmount" />
+
+        <TextView
+            android:id="@+id/lblTransactionDisplay6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Subcategory:"
+            app:layout_constraintStart_toStartOf="@+id/lblTransactionDisplay4"
+            app:layout_constraintTop_toBottomOf="@+id/lblTransactionDisplay4" />
+
+        <TextView
+            android:id="@+id/txtTransactionDisplaySubcategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="20dp"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="@+id/txtTransactionDisplayCatgeory"
+            app:layout_constraintTop_toBottomOf="@+id/txtTransactionDisplayCatgeory" />
+
+        <TextView
+            android:id="@+id/lblTransactionDisplay5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Date and Time:"
+            app:layout_constraintStart_toStartOf="@+id/lblTransactionDisplay6"
+            app:layout_constraintTop_toBottomOf="@+id/lblTransactionDisplay6" />
+
+        <TextView
+            android:id="@+id/txtTransactionDisplayDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="20dp"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="@+id/txtTransactionDisplaySubcategory"
+            app:layout_constraintTop_toBottomOf="@+id/txtTransactionDisplaySubcategory" />
+
+        <TextView
+            android:id="@+id/lblTransactionDisplay7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Notes:"
+            app:layout_constraintStart_toStartOf="@+id/lblTransactionDisplay5"
+            app:layout_constraintTop_toBottomOf="@+id/lblTransactionDisplay5" />
+
+        <TextView
+            android:id="@+id/txtTransactionDisplayNotes"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="5dp"
+            android:scrollbars="vertical"
+            android:text="TextView"
+            app:layout_constraintBottom_toTopOf="@+id/btn_close_NewTransaction"
+            app:layout_constraintEnd_toEndOf="@+id/txtTransactionDisplayDate"
+            app:layout_constraintStart_toStartOf="@+id/lblTransactionDisplay7"
+            app:layout_constraintTop_toBottomOf="@+id/lblTransactionDisplay7" />
+
         <Button
             android:id="@+id/btn_edit_DisplayTransaction"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/buttons"
             android:text="@string/edit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.85"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.95" />
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/btn_close_NewTransaction" />
 
         <Button
             android:id="@+id/btn_close_NewTransaction"
@@ -29,171 +165,10 @@
             android:layout_height="wrap_content"
             android:background="@drawable/buttons"
             android:text="@string/close"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.05"
+            app:layout_constraintEnd_toStartOf="@+id/btn_edit_DisplayTransaction"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.95" />
-
-        <TableLayout
-            android:id="@+id/tableLayout"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:stretchColumns="*"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/lblTransactionDisplay1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="Sender:" />
-
-                <TextView
-                    android:id="@+id/txtTransactionDisplaySender"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="TextView" />
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/lblTransactionDisplay2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="Receiver:" />
-
-                <TextView
-                    android:id="@+id/txtTransactionDisplayReceiver"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-
-                    android:text="TextView" />
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/lblTransactionDisplay3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="Amount:" />
-
-                <TextView
-                    android:id="@+id/txtTransactionDisplayAmount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-
-                    android:text="TextView" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/lblTransactionDisplay4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="Category:" />
-
-                <TextView
-                    android:id="@+id/txtTransactionDisplayCatgeory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-
-                    android:text="TextView" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/lblTransactionDisplay6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="Subcategory:" />
-
-                <TextView
-                    android:id="@+id/txtTransactionDisplaySubcategory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-
-                    android:text="TextView" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/lblTransactionDisplay5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="Date and Time:" />
-
-                <TextView
-                    android:id="@+id/txtTransactionDisplayDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-
-                    android:text="TextView" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/lblTransactionDisplay7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="Notes:" />
-            </TableRow>
-        </TableLayout>
-
-        <TextView
-            android:id="@+id/txtTransactionNotes"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="10dp"
-            android:scrollbars="vertical"
-            android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/btn_close_NewTransaction"
-            app:layout_constraintEnd_toEndOf="@+id/tableLayout"
-            app:layout_constraintStart_toStartOf="@+id/tableLayout"
-            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
+            app:layout_constraintTop_toTopOf="@+id/btn_edit_DisplayTransaction" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
