--- a/app/src/main/res/layout-land/activity_log_in.xml
+++ b/app/src/main/res/layout-land/activity_log_in.xml
@@ -16,24 +16,28 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="104dp"
+       app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintVertical_bias="0.5"
         app:srcCompat="@drawable/logo" />
 
     <TextView
         android:id="@+id/txtViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
         android:text="@string/app_name"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.1"
+       android:layout_marginTop="20dp"
+        />
 
     <EditText
         android:id="@+id/txtbxLogInUsername"
@@ -43,36 +47,38 @@
         android:ems="10"
         android:hint="Username"
         android:inputType="textNoSuggestions|textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtViewTitle" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintVertical_bias="0.3" />
 
     <EditText
         android:id="@+id/txtbxLogInPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtbxLogInUsername" />
+        app:layout_constraintTop_toBottomOf="@+id/txtbxLogInUsername"
+        app:layout_constraintHorizontal_bias="0.8"
+        android:layout_marginTop="20dp"/>
 
     <Button
         android:id="@+id/btnLogIn"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="134dp"
         android:background="@drawable/buttons"
         android:onClick="onBtnLogin_Clicked"
         android:text="Log In"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtbxLogInPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/txtbxLogInPassword"
+        app:layout_constraintHorizontal_bias="0.8"
+        android:layout_marginTop="20dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+  
