--- a/app/src/main/res/layout/fragment_stakeholder_filter.xml
+++ b/app/src/main/res/layout/fragment_stakeholder_filter.xml
@@ -1,126 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout4"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.stakeholders.StakeholderFilter">
+    android:layout_width="match_parent">
 
-    <TextView
-        android:id="@+id/lblStakeholderFilterAttributes2"
-        android:layout_width="wrap_content"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/frameLayout4"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Sort by"
-        app:layout_constraintStart_toStartOf="@+id/stakeholder_filter_deleted"
-        app:layout_constraintTop_toBottomOf="@+id/stakeholder_filter_deleted" />
+        android:paddingBottom="20dp"
+        tools:context=".fragments.stakeholders.StakeholderFilter">
 
-    <CheckBox
-        android:id="@+id/stakeholder_filter_deleted"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Deleted"
-        app:layout_constraintStart_toStartOf="@+id/lblStakeholderFilterAttributes"
-        app:layout_constraintTop_toBottomOf="@+id/lblStakeholderFilterAttributes" />
-
-    <TextView
-        android:id="@+id/lblStakeholderFilterAttributes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Attributes"
-        app:layout_constraintStart_toStartOf="@+id/stakeholder_filter_roles"
-        app:layout_constraintTop_toBottomOf="@+id/stakeholder_filter_roles" />
-
-    <Button
-        android:id="@+id/btn_cancel_FilterStakeholder"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/buttons"
-        android:text="Clear"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_filter_FilterStakeholder"
-        app:layout_constraintEnd_toStartOf="@+id/btn_filter_FilterStakeholder"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btn_filter_FilterStakeholder"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/buttons"
-        android:text="@string/filter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/btn_cancel_FilterStakeholder" />
-
-    <AutoCompleteTextView
-        android:id="@+id/stakeholder_filter_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:ems="10"
-        android:hint="Name"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <CheckBox
-        android:id="@+id/stakeholder_filter_all"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:checked="true"
-        android:text="All"
-        app:layout_constraintStart_toStartOf="@+id/stakeholder_filter_name"
-        app:layout_constraintTop_toBottomOf="@+id/lblStakeholderFilterRoles" />
-
-    <LinearLayout
-        android:id="@+id/stakeholder_filter_roles"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/stakeholder_filter_all"
-        app:layout_constraintTop_toBottomOf="@+id/stakeholder_filter_all"
-        android:orientation="vertical" />
-
-    <TextView
-        android:id="@+id/lblStakeholderFilterRoles"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Roles"
-        app:layout_constraintStart_toStartOf="@+id/stakeholder_filter_name"
-        app:layout_constraintTop_toBottomOf="@+id/stakeholder_filter_name" />
-
-    <RadioGroup
-        android:id="@+id/stakeholder_filter_radioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        app:layout_constraintStart_toStartOf="@+id/lblStakeholderFilterAttributes2"
-        app:layout_constraintTop_toBottomOf="@+id/lblStakeholderFilterAttributes2">
-
-        <RadioButton
-            android:id="@+id/stakeholder_filter_byName"
+        <TextView
+            android:id="@+id/lblStakeholderFilterAttributes2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Sort by"
+            app:layout_constraintStart_toStartOf="@+id/stakeholder_filter_deleted"
+            app:layout_constraintTop_toBottomOf="@+id/stakeholder_filter_deleted" />
+
+        <CheckBox
+            android:id="@+id/stakeholder_filter_deleted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Deleted"
+            app:layout_constraintStart_toStartOf="@+id/lblStakeholderFilterAttributes"
+            app:layout_constraintTop_toBottomOf="@+id/lblStakeholderFilterAttributes" />
+
+        <TextView
+            android:id="@+id/lblStakeholderFilterAttributes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Attributes"
+            app:layout_constraintStart_toStartOf="@+id/stakeholder_filter_roles"
+            app:layout_constraintTop_toBottomOf="@+id/stakeholder_filter_roles" />
+
+        <Button
+            android:id="@+id/btn_cancel_FilterStakeholder"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/buttons"
+            android:text="Clear"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.15"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/stakeholder_filter_radioGroup"
+            android:layout_marginTop="40dp"
+            />
+
+        <Button
+            android:id="@+id/btn_filter_FilterStakeholder"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/buttons"
+            android:text="@string/filter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.85"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/stakeholder_filter_radioGroup"
+            android:layout_marginTop="40dp"
+
+            />
+
+        <AutoCompleteTextView
+            android:id="@+id/stakeholder_filter_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:ems="10"
+            android:hint="Name"
+            android:inputType="textPersonName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <CheckBox
+            android:id="@+id/stakeholder_filter_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:checked="true"
-            android:text="Name" />
+            android:text="All"
+            app:layout_constraintStart_toStartOf="@+id/stakeholder_filter_name"
+            app:layout_constraintTop_toBottomOf="@+id/lblStakeholderFilterRoles" />
 
-        <RadioButton
-            android:id="@+id/stakeholder_filter_byRole"
+        <LinearLayout
+            android:id="@+id/stakeholder_filter_roles"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Role" />
+            android:orientation="vertical"
+            app:layout_constraintStart_toStartOf="@+id/stakeholder_filter_all"
+            app:layout_constraintTop_toBottomOf="@+id/stakeholder_filter_all" />
 
-    </RadioGroup>
+        <TextView
+            android:id="@+id/lblStakeholderFilterRoles"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Roles"
+            app:layout_constraintStart_toStartOf="@+id/stakeholder_filter_name"
+            app:layout_constraintTop_toBottomOf="@+id/stakeholder_filter_name" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <RadioGroup
+            android:id="@+id/stakeholder_filter_radioGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            app:layout_constraintStart_toStartOf="@+id/lblStakeholderFilterAttributes2"
+            app:layout_constraintTop_toBottomOf="@+id/lblStakeholderFilterAttributes2">
+
+            <RadioButton
+                android:id="@+id/stakeholder_filter_byName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="Name" />
+
+            <RadioButton
+                android:id="@+id/stakeholder_filter_byRole"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Role" />
+
+        </RadioGroup>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
