--- a/app/src/main/res/layout/fragment_transaction_display.xml
+++ b/app/src/main/res/layout/fragment_transaction_display.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.transactions.TransactionDisplay">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"
+            tools:context=".fragments.transactions.TransactionDisplay">
+
+
 
         <TextView
             android:id="@+id/lblTransactionDisplay1"
@@ -135,29 +140,33 @@
             app:layout_constraintStart_toStartOf="@+id/lblTransactionDisplay5"
             app:layout_constraintTop_toBottomOf="@+id/lblTransactionDisplay5" />
 
-        <TextView
-            android:id="@+id/txtTransactionDisplayNotes"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="5dp"
-            android:scrollbars="vertical"
-            android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/btn_Delete_DisplayTransaction"
-            app:layout_constraintEnd_toEndOf="@+id/txtTransactionDisplayDate"
-            app:layout_constraintStart_toStartOf="@+id/lblTransactionDisplay7"
-            app:layout_constraintTop_toBottomOf="@+id/lblTransactionDisplay7" />
+                <TextView
+                    android:id="@+id/txtTransactionDisplayNotes"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:scrollbars="vertical"
+                    android:text="TextView"
+                    app:layout_constraintBottom_toTopOf="@+id/btn_Delete_DisplayTransaction"
+                    app:layout_constraintEnd_toEndOf="@+id/txtTransactionDisplayDate"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/lblTransactionDisplay7"
+                    app:layout_constraintTop_toBottomOf="@+id/lblTransactionDisplay7"
+                    app:layout_constraintVertical_bias="1.0" />
 
-        <Button
-            android:id="@+id/btn_Delete_DisplayTransaction"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/buttons"
-            android:text="Delete"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+                <Button
+                    android:id="@+id/btn_Delete_DisplayTransaction"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/buttons"
+                    android:text="Delete"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtTransactionDisplayNotes" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</FrameLayout>
+</ScrollView>
