--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -96,6 +96,9 @@
         <action
             android:id="@+id/action_stakeholderDisplay_to_stakeholderSummary"
             app:destination="@id/stakeholderSummary" />
+        <action
+            android:id="@+id/action_stakeholderDisplay_to_stakeholderNew"
+            app:destination="@id/stakeholderNew" />
     </fragment>
     <fragment
         android:id="@+id/stakeholderFilter"
@@ -114,6 +117,14 @@
         <action
             android:id="@+id/action_stakeholderNew_to_stakeholderSummary"
             app:destination="@id/stakeholderSummary" />
+        <argument
+            android:name="editStakeholder"
+            app:argType="be.kuleuven.elcontador10.background.parcels.EditStakeholderParcel"
+            app:nullable="true"
+            android:defaultValue="@null" />
+        <action
+            android:id="@+id/action_stakeholderNew_to_stakeholderDisplay"
+            app:destination="@id/stakeholderDisplay" />
     </fragment>
     <fragment
         android:id="@+id/stakeholderSummary"
